fix(console): operation button align in api resource detail

--- a/packages/console/src/pages/ApiResourceDetails/index.module.scss
+++ b/packages/console/src/pages/ApiResourceDetails/index.module.scss
@@ -37,6 +37,9 @@
   }
 
   .operation {
+    display: flex;
+    align-items: center;
+
     > *:not(:first-child) {
       margin-left: _.unit(3);
     }
